--- a/source/assets/scss/views/products-mastheads.scss
+++ b/source/assets/scss/views/products-mastheads.scss
@@ -10,7 +10,29 @@
 // @import '../modules/masonry';
 // @import '../modules/fonts-optional';
 // @include foundation-off-canvas;
-
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% { opacity: 0; }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fade-move {
+    0% {
+        opacity: 0;
+        transform: translate3D(-6px, 0, 0);
+    }
+    75% {
+        opacity: 0;
+        transform: translate3D(-6px, 0, 0);
+    }
+    100% {
+        opacity: 1;
+        transform: translate3D(0, 0, 0);
+    }
+}
 .masthead {
     //background: linear-gradient(70.92deg, rgba(0, 107, 206, 0.5) -3.63%, rgba(0, 133, 255, 0) 26.82%), linear-gradient(112.42deg, rgba(0, 227, 186, 0.28) 0.62%, rgba(0, 227, 186, 0) 27.21%), linear-gradient(180deg, #312F2F 0%, #62605D 100%);
     /* Rectangle 2.1 */
@@ -30,9 +52,9 @@
             }
         }
         &.is-stuck {
-            .menu-item:last-child {
-                background-color: black(0.1);
-                color: white;
+            .menu-item:last-child { // highlight the CTA
+                background-color: white;
+                // color: white;
             }
         }
     }
@@ -47,17 +69,6 @@
             transform: translate3d(4vw, 4vw, 0); // using transform vs positioning or padding
         }
         .art-light-blob {
-            // @include abs-topleft;
-            // //background: linear-gradient(170deg, #003ADF -5%, #00A280 82%);
-            // width: 23vw;
-            // height: 16vw;
-            // opacity: 0.5;
-            // filter: blur(70px);
-            // border-radius: 200px;
-            // transform: rotate3d(1, 1, 1, 45deg) translate3d(4vw, 3vw, 0);
-            // //z-index: 1;
-            /* Rectangle */
-
             @include abs-topleft;
             width: 815.11px;
             height: 635.03px;
@@ -70,6 +81,15 @@
             @include abs-topleft;
             height: 100%;
             width:  100%;
+            &.lozad {
+                @include blur(2vw);
+                transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s, -moz-filter 0.3s, -o-filter 0.3s, -ms-filter 0.3s;
+            }
+            &.lozad.loaded {
+                @include blur(0);
+                -webkit-transition-delay: 1s;
+                transition-delay:         1s;
+            }
         }
         .art-pattern {
             mix-blend-mode: soft-light;
@@ -82,6 +102,16 @@
         padding-right: 1vw;
     }
 }
+$transition: opacity $timing-medium linear, color $timing-medium linear, background-color $timing-medium linear, transform $timing-medium ease;
+.step-1, .step-2 {@include transition ($transition);}
+.step-1 {
+    animation: fade 1s linear both;
+    transition-delay: 0.3s;       
+}
+.step-2 {
+    animation: fade-in 0.6s ease 1s both;
+}
+
 .product-cpaas {
     .art-light-grad {
         /* grad-green-blue-cpaas - contains lighting - right grad and ball left*/
@@ -90,7 +120,4 @@
         // background: linear-gradient(270deg, rgba(0, 227, 186, 0.28) -6.31%, rgba(0, 227, 186, 0) 19.35%), linear-gradient(297.76deg, rgba(0, 107, 206, 0.5) -2.46%, rgba(0, 133, 255, 0) 32.01%);
         // mix-blend-mode: color-dodge;
     }
-    // .art-light-blob {
-
-    // }
 }
