--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -432,7 +432,12 @@
             }
         }
     }
-
+}
+.bg-blue-green-grad {
+    color: white;
+    // grad-green-blue-cpaas
+    background: linear-gradient(276.03deg, rgba(0, 227, 186, 0.15) 1.62%, rgba(0, 227, 186, 0) 18.61%, rgba(0, 227, 186, 0) 88.36%, rgba(0, 227, 186, 0.19) 107.7%), linear-gradient(301.24deg, rgba(0, 107, 206, 0.5) 3.05%, rgba(0, 133, 255, 0) 26.72%, rgba(0, 133, 255, 0) 82.35%, rgba(0, 107, 206, 0.4) 108.59%), linear-gradient(180deg, #1F1E1E 0%, #595856 100%);
+    mix-blend-mode: normal;
 }
 // these are the same as strip, just diff angle /shrug
 .blob-cks {
