--- a/source/assets/scss/views/products-mastheads.scss
+++ b/source/assets/scss/views/products-mastheads.scss
@@ -70,10 +70,10 @@
         }
         .art-light-blob {
             @include abs-topleft;
-            width: 815.11px;
-            height: 635.03px;
-            background: radial-gradient(325.62px at 50% 50%, #00E3BA 0%, rgba(0, 143, 223, 0) 100%);
-            opacity: 0.5;
+            width:  45vw;
+            height: 45vw;
+            // background: radial-gradient(325.62px at 50% 50%, #00E3BA 0%, rgba(0, 143, 223, 0) 100%);
+            opacity: 0.8;
             // transform: translate3d(4vw, 4vw, 0);
 
         }
@@ -93,7 +93,7 @@
         }
         .art-pattern {
             mix-blend-mode: soft-light;
-            opacity: 0.3;
+            // opacity: 0.3;
         }
     }
     .masthead-icon {
@@ -119,5 +119,10 @@ $transition: opacity $timing-medium linear, color $timing-medium linear, backgro
         mix-blend-mode: normal;
         // background: linear-gradient(270deg, rgba(0, 227, 186, 0.28) -6.31%, rgba(0, 227, 186, 0) 19.35%), linear-gradient(297.76deg, rgba(0, 107, 206, 0.5) -2.46%, rgba(0, 133, 255, 0) 32.01%);
         // mix-blend-mode: color-dodge;
+    }
+    .art-light-blob {
+        /* grad-green-blue-cpaas */
+        background: radial-gradient(392.20px at 44.68% 42.78%, rgba(50, 102, 162, 0.88) 0%, rgba(34, 99, 173, 0.09) 82.87%, rgba(34, 99, 173, 0) 100%);
+        mix-blend-mode: normal;
     }
 }
