--- a/source/layouts/products.erb
+++ b/source/layouts/products.erb
@@ -11,6 +11,9 @@
     </head>
     <% if build? %><%= partial "partials/scripts/google-tm-body" %><% end %>
     <body class="<%= page_classes %> container-gray-11">
+        <%= partial "assets/icons/inlined/product-shapes-symbol.svg" %><%# product-related shapes %>
+        <%= stylesheet_link_tag "views/products-mastheads" %><%# masthead css, for complex art %>
+         
         <%#= partial "partials/snippets/alert-ribbon" %>
         <%#=<div class="strip-bright strip-small"></div>%>
         <div class="container-gray-1">
