--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -1,5 +1,5 @@
 ---
-title: "Compliant Managed Integration (CMI)"
+title: "Compliant Managed Integration (CMI) | Datica Cloud Compliance"
 summary: "Compliant Managed Integration (CMI) handles HIPAA compliant, scalable, and secure data exchange with any EHR."
 navTitle: "Datica CMI"
 author: "Datica, Inc."
@@ -17,11 +17,14 @@ subnav:
     title: "Overview"
     slug: "overview"
   -
-    title: "Use Cases"
-    slug: "use-cases"
+    title: "How it works"
+    slug: "how-it-works"
   -
     title: "Benefits"
     slug: "benefits"
+  -
+    title: "Features"
+    slug: "features"
   -
     title: "Customer Proof"
     slug: "proof"
@@ -37,11 +40,28 @@ ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
 
-= partial "partials/snippets/nav-sub-product"
+/ = partial "partials/snippets/nav-sub-product"
 
 aside.hide-for-large.section-article.container-color--blue-alt.menu.button-group.align-center
   = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :item_id => "cta_top_success" }
   = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down" }
+
+section.masthead.bg-blue-green-grad.product-cmi.relative id=current_page.data.subnav[0].slug data-magellan-target=current_page.data.subnav[0].slug
+  .section-article--lg.relative.z-10
+    .row.align-middle
+      .columns.small-12.medium-10.large-8
+        .media-object.relative.stack-for-small 
+          .media-object-section
+            = inline_svg("cmi-logo-w", class: "masthead-icon")
+          .media-object-section.media-object--info.main-section.align-self-middle
+            h1.headline-3.text-bold.margin-bottom-sm Compliant Managed Integration
+            p.lead = current_page.data.summary
+            = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
+  .art
+    = partial "partials/snippets/nav-sub-product"
+    = inline_svg("products-discs-color", class: "z-5 art-accent step-1")
+    .art-bg-fill.art-light-blob
+    .z-0.art-bg-fill.art-pattern.container-image--fixed.lozad data-background-image=bg_image
 
 .container-color--gray-light
   section.section-article
